<resources>
    <string name="app_name">KnotsNCrosses</string>
    <string name="protocol">https://</string>
    <string name="domain">generic-game-service.herokuapp.com</string>
    <string name="base_path">/Game</string>
    <string name="game_service_key">yHSNBWpygM</string>
    <string name="join_game_path">/%1s/join</string>
    <string name="poll_game_path">/%1s/poll</string>
    <string name="update_game_path">/%1s/update</string>
    <string name="player_name">Gamer name</string>
    <string name="startButton">Start</string>
    <string name="welcome_text">Welcome gamer!</string>
    <string name="userName">Gamer name</string>
    <string name="new_game">New Game</string>
    <string name="join_game">Join Game</string>
    <string name="save">Save</string>
    <string name="recent_game_id">Recent game id:</string>
    <string name="enterGameId">Enter a game ID to join</string>
    <string name="save_game">Save Games</string>
    <string name="playertwo">PlayerTwo</string>
    <string name="playerone">PlayerOne</string>
    <string name="winner">Winner</string>
    <string name="player_1">Player 1</string>
    <string name="JoinOtherPeoplesGames">Join another players game</string>
    <string name="CreateUserName">Create a username</string>
    <string name="cheater">Wait for people to join... Cheater</string>
</resources>