<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinGame"
    android:background="@color/cardview_dark_background">


    <TextView
        android:id="@+id/joinGameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="116dp"
        android:text="@string/JoinOtherPeoplesGames"
        android:textColor="@color/userNameColor"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/joinGameId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/joinGameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="310dp"
        android:layout_marginBottom="121dp"
        android:hint="@string/enterGameId"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/joinGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/userNameColor"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/joinGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="207dp"
        android:text="@string/join_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinGameId" />

</androidx.constraintlayout.widget.ConstraintLayout>